syntax = "proto3";

option go_package = "protos/in/user";

package user;

service User {
    rpc GetUser(GetUserReq) returns (GetUserResp) {}
}

message GetUserReq {
    string id = 1;
}

message GetUserResp {
    UserDTO user = 1;
}

message UserDTO {
    string id = 1;
    string username = 2;
}
